--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style link="style.css"></style>
+  <title>Prototypes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <h1>Signature Pad</h1>
   <div class="wrapper">
     <canvas id="signature-pad" class="signature-pad" width=400 height=200></canvas>
   </div>
@@ -19,13 +20,15 @@
   <button id="draw">Draw</button>
   <button id="erase">Erase</button>
   <button id="clear">Clear</button>
-  <hr />
+  <br />
   <img id="result" src="" />
-
+  <hr />
+  <h1>Screenshot</h1>
 
 
   <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
-  <script src="script.js"></script>
+  <script src="sigPad.js"></script>
+  <script src="snapshot.js"></script>
 </body>
 
 </html>
